syntax = "proto3";
import "google/protobuf/empty.proto";
import "google/protobuf/wrappers.proto";
package sail.api.v1;

service DestinationService {
  rpc StreamDestinations(DestinationRequest) returns (stream DestinationItems) {
  }
}

message DestinationRequest {}

message DestinationItems {
  repeated  Destination items = 1;
}

message Destination {
  string destination_id = 1;
  google.protobuf.StringValue address = 2;
  google.protobuf.StringValue health = 3;
  google.protobuf.StringValue host = 4;
}